--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "gulp": "^4.0.2",
     "http-errors": "~1.6.3",
+    "kind-of": "^6.0.3",
     "morgan": "~1.9.1",
     "pug": "^2.0.4",
     "scss": "^0.2.4"
