--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "kind-of": "^6.0.3",
+    "lodash.template": "^4.5.0",
     "morgan": "~1.9.1",
     "pug": "^2.0.4",
     "scss": "^0.2.4"
